logout added