@@ -35,12 +35,13 @@ public class SecurityConfig {
         return http.cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration config = new CorsConfiguration();
                     config.setAllowedOrigins(Collections.singletonList("*"));
-                    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-                    config.setAllowedHeaders(List.of("*"));
+                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowedHeaders(Collections.singletonList("*"));
                     return config;
                 }))
                 .authorizeExchange(exchange ->
-                        exchange.pathMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        exchange.pathMatchers("/logout/**").permitAll()
+                                .pathMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                                 .pathMatchers("/*.css", "/*.js", "/favicon.ico", "/static/**", "/static/css/**"
                                         , "/static/js/**", "/manifest.json", "/*.png", "/*.PNG", "/*.ico").permitAll()
                                 .pathMatchers("/actuator/health/**").permitAll()
